// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app/MenuButtons <MenuButtonsMetaInfo> matches the snapshot 1`] = `
<div
  class="buttonWithPanel menuButtonsMetaInfoButton open"
>
  <div
    class="buttonWithPanelButtonWrapper"
  >
    <input
      class="buttonWithPanelButton menuButtonsMetaInfoButtonButton"
      type="button"
      value="Firefox (48.0) Intel Mac OS X 10.11"
    />
  </div>
  <div
    class="arrowPanelAnchor"
  >
    <div
      class="arrowPanel open arrowPanelOpenMetaInfo"
    >
      <div
        class="arrowPanelArrow"
      />
      <div
        class="arrowPanelContent"
      >
        <h2
          class="arrowPanelSubTitle"
        >
          Profile Information
        </h2>
        <div
          class="arrowPanelSection"
        >
          <div
            class="metaInfoRow"
          >
            <span
              class="metaInfoLabel"
            >
              Recording started:
            </span>
            toLocaleString Sat, 09 Apr 2016 17:02:32 GMT
          </div>
          <div
            class="metaInfoRow"
          >
            <span
              class="metaInfoLabel"
            >
              Interval:
            </span>
            1
            ms
          </div>
          <div
            class="metaInfoRow"
          >
            <span
              class="metaInfoLabel"
            >
              Profile Version:
            </span>
            26
          </div>
          <div
            class="metaInfoRow"
          >
            <span
              class="metaInfoLabel"
            >
              Buffer Capacity:
            </span>
            16.0KB
          </div>
          <div
            class="metaInfoRow"
          >
            <span
              class="metaInfoLabel"
            >
              Buffer Duration:
            </span>
            20 seconds
          </div>
          <div
            class="arrowPanelSection"
          >
            <div
              class="metaInfoRow"
            >
              <span
                class="metaInfoLabel"
              >
                Features:
              </span>
              <ul
                class="metaInfoList"
              >
                <li
                  class="metaInfoListItem"
                >
                  js
                </li>
                <li
                  class="metaInfoListItem"
                >
                  threads
                </li>
              </ul>
            </div>
            <div
              class="metaInfoRow"
            >
              <span
                class="metaInfoLabel"
              >
                Threads Filter:
              </span>
              <ul
                class="metaInfoList"
              >
                <li
                  class="metaInfoListItem"
                >
                  GeckoMain
                </li>
                <li
                  class="metaInfoListItem"
                >
                  DOM Worker
                </li>
              </ul>
            </div>
          </div>
        </div>
        <h2
          class="arrowPanelSubTitle"
        >
          Application
        </h2>
        <div
          class="arrowPanelSection"
        >
          <div
            class="metaInfoRow"
          >
            <span
              class="metaInfoLabel"
            >
              Name:
            </span>
            Firefox
          </div>
          <div
            class="metaInfoRow"
          >
            <span
              class="metaInfoLabel"
            >
              Version:
            </span>
            48.0
          </div>
          <div
            class="metaInfoRow"
          >
            <span
              class="metaInfoLabel"
            >
              Update Channel:
            </span>
            nightly
          </div>
          <div
            class="metaInfoRow"
          >
            <span
              class="metaInfoLabel"
            >
              Build ID:
            </span>
            20181126165837
          </div>
          <div
            class="metaInfoRow"
          >
            <span
              class="metaInfoLabel"
            >
              Build Type:
            </span>
            Debug
          </div>
          <div
            class="metaInfoRow"
          >
            <span
              class="metaInfoLabel"
            >
              Extensions:
            </span>
            <ul
              class="metaInfoList"
            >
              <li
                class="metaInfoListItem"
              >
                Form Autofill
              </li>
              <li
                class="metaInfoListItem"
              >
                Firefox Screenshots
              </li>
              <li
                class="metaInfoListItem"
              >
                Gecko Profiler
              </li>
            </ul>
          </div>
        </div>
        <h2
          class="arrowPanelSubTitle"
        >
          Platform
        </h2>
        <div
          class="arrowPanelSection"
        >
          <div
            class="metaInfoRow"
          >
            <span
              class="metaInfoLabel"
            >
              Platform:
            </span>
            Macintosh
          </div>
          <div
            class="metaInfoRow"
          >
            <span
              class="metaInfoLabel"
            >
              OS:
            </span>
            Intel Mac OS X 10.11
          </div>
          <div
            class="metaInfoRow"
          >
            <span
              class="metaInfoLabel"
            >
              ABI:
            </span>
            x86_64-gcc3
          </div>
        </div>
        <details>
          <summary
            class="arrowPanelSubTitle"
          >
            Profiler Overhead
          </summary>
          <div
            class="arrowPanelSection"
          >
            <div
              class="metaInfoGrid"
            >
              <div />
              <div>
                Mean
              </div>
              <div>
                Max
              </div>
              <div>
                Min
              </div>
              <div>
                Overhead
              </div>
              <div>
                227ns
              </div>
              <div>
                410ns
              </div>
              <div>
                38.0ns
              </div>
              <div>
                Cleaning
              </div>
              <div>
                54.1ns
              </div>
              <div>
                100ns
              </div>
              <div>
                7.00ns
              </div>
              <div>
                Counter
              </div>
              <div>
                59.1ns
              </div>
              <div>
                105ns
              </div>
              <div>
                12.0ns
              </div>
              <div>
                Interval
              </div>
              <div>
                857ns
              </div>
              <div>
                1,000ns
              </div>
              <div>
                0.0000ns
              </div>
              <div>
                Lockings
              </div>
              <div>
                49.1ns
              </div>
              <div>
                95.0ns
              </div>
              <div>
                2.00ns
              </div>
            </div>
            <div
              class="metaInfoRow"
            >
              <span
                class="metaInfoWideLabel"
              >
                Overhead Durations:
              </span>
              <span
                class="metaInfoValueRight"
              >
                1,586ns
              </span>
            </div>
            <div
              class="metaInfoRow"
            >
              <span
                class="metaInfoWideLabel"
              >
                Overhead Percentage:
              </span>
              <span
                class="metaInfoValueRight"
              >
                26,433%
              </span>
            </div>
            <div
              class="metaInfoRow"
            >
              <span
                class="metaInfoWideLabel"
              >
                Profiled Duration:
              </span>
              <span
                class="metaInfoValueRight"
              >
                6.00ns
              </span>
            </div>
          </div>
        </details>
      </div>
    </div>
  </div>
</div>
`;

exports[`app/MenuButtons <MenuButtonsMetaInfo> with no statistics object should not make the app crash 1`] = `
<div
  class="buttonWithPanel menuButtonsMetaInfoButton open"
>
  <div
    class="buttonWithPanelButtonWrapper"
  >
    <input
      class="buttonWithPanelButton menuButtonsMetaInfoButtonButton"
      type="button"
      value="Firefox (48.0) Intel Mac OS X 10.11"
    />
  </div>
  <div
    class="arrowPanelAnchor"
  >
    <div
      class="arrowPanel open arrowPanelOpenMetaInfo"
    >
      <div
        class="arrowPanelArrow"
      />
      <div
        class="arrowPanelContent"
      >
        <h2
          class="arrowPanelSubTitle"
        >
          Profile Information
        </h2>
        <div
          class="arrowPanelSection"
        >
          <div
            class="metaInfoRow"
          >
            <span
              class="metaInfoLabel"
            >
              Recording started:
            </span>
            toLocaleString Sat, 09 Apr 2016 17:02:32 GMT
          </div>
          <div
            class="metaInfoRow"
          >
            <span
              class="metaInfoLabel"
            >
              Interval:
            </span>
            1
            ms
          </div>
          <div
            class="metaInfoRow"
          >
            <span
              class="metaInfoLabel"
            >
              Profile Version:
            </span>
            26
          </div>
        </div>
        <h2
          class="arrowPanelSubTitle"
        >
          Application
        </h2>
        <div
          class="arrowPanelSection"
        >
          <div
            class="metaInfoRow"
          >
            <span
              class="metaInfoLabel"
            >
              Name:
            </span>
            Firefox
          </div>
          <div
            class="metaInfoRow"
          >
            <span
              class="metaInfoLabel"
            >
              Version:
            </span>
            48.0
          </div>
          <div
            class="metaInfoRow"
          >
            <span
              class="metaInfoLabel"
            >
              Update Channel:
            </span>
            nightly
          </div>
          <div
            class="metaInfoRow"
          >
            <span
              class="metaInfoLabel"
            >
              Build ID:
            </span>
            20181126165837
          </div>
          <div
            class="metaInfoRow"
          >
            <span
              class="metaInfoLabel"
            >
              Build Type:
            </span>
            Debug
          </div>
          <div
            class="metaInfoRow"
          >
            <span
              class="metaInfoLabel"
            >
              Extensions:
            </span>
            <ul
              class="metaInfoList"
            >
              <li
                class="metaInfoListItem"
              >
                Form Autofill
              </li>
              <li
                class="metaInfoListItem"
              >
                Firefox Screenshots
              </li>
              <li
                class="metaInfoListItem"
              >
                Gecko Profiler
              </li>
            </ul>
          </div>
        </div>
        <h2
          class="arrowPanelSubTitle"
        >
          Platform
        </h2>
        <div
          class="arrowPanelSection"
        >
          <div
            class="metaInfoRow"
          >
            <span
              class="metaInfoLabel"
            >
              Platform:
            </span>
            Macintosh
          </div>
          <div
            class="metaInfoRow"
          >
            <span
              class="metaInfoLabel"
            >
              OS:
            </span>
            Intel Mac OS X 10.11
          </div>
          <div
            class="metaInfoRow"
          >
            <span
              class="metaInfoLabel"
            >
              ABI:
            </span>
            x86_64-gcc3
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`app/MenuButtons <Publish> matches the snapshot for an error 1`] = `
<div
  class="menuButtonsPublishUpload"
  data-testid="MenuButtonsPublish-container"
>
  <div
    class="photon-message-bar photon-message-bar-error"
  >
    Uh oh, something went wrong when publishing the profile.
    <button
      class="photon-button photon-button-micro"
      type="button"
    >
      Try again
    </button>
  </div>
  <div
    class="menuButtonsPublishError"
  >
    This is a mock error
  </div>
</div>
`;

exports[`app/MenuButtons <Publish> matches the snapshot for the closed state 1`] = `
<div>
  <div
    class="buttonWithPanel menuButtonsMetaInfoButton"
  >
    <div
      class="buttonWithPanelButtonWrapper"
    >
      <input
        class="buttonWithPanelButton menuButtonsMetaInfoButtonButton"
        type="button"
        value="Firefox () "
      />
    </div>
    <div
      class="arrowPanelAnchor"
    >
      <div
        class="arrowPanel arrowPanelOpenMetaInfo"
      >
        <div
          class="arrowPanelArrow"
        />
      </div>
    </div>
  </div>
  <div
    class="menuButtons"
  >
    <div
      class="buttonWithPanel menuButtonsShareButton menuButtonsShareButtonOriginal"
    >
      <div
        class="buttonWithPanelButtonWrapper"
      >
        <input
          class="buttonWithPanelButton"
          type="button"
          value="Publish…"
        />
      </div>
      <div
        class="arrowPanelAnchor"
      >
        <div
          class="arrowPanel menuButtonsPublishPanel"
        >
          <div
            class="arrowPanelArrow"
          />
        </div>
      </div>
    </div>
    <a
      class="menuButtonsLink"
      href="/docs/"
      target="_blank"
      title="Open the documentation in a new window"
    >
      Docs
      <i
        class="open-in-new"
      />
    </a>
  </div>
</div>
`;

exports[`app/MenuButtons <Publish> matches the snapshot for the opened panel for a nightly profile 1`] = `
<div
  data-testid="MenuButtonsPublish-container"
>
  <form
    class="menuButtonsPublishContent"
  >
    <div
      class="menuButtonsPublishIcon"
    />
    <h1
      class="menuButtonsPublishTitle"
    >
      Share Performance Profile
    </h1>
    <p
      class="menuButtonsPublishInfoDescription"
    >
      Upload your profile and make it accessible to anyone with the link.
       This profile is from Firefox Nightly, so by default all information is included.
    </p>
    <h3>
      Include additional data that may be identifiable
    </h3>
    <div
      class="menuButtonsPublishDataChoices"
    >
      <label
        class="photon-label menuButtonsPublishDataChoicesLabel"
      >
        <input
          checked=""
          class="photon-checkbox photon-checkbox-default"
          name="includeHiddenThreads"
          type="checkbox"
        />
        Include hidden threads
      </label>
      <label
        class="photon-label menuButtonsPublishDataChoicesLabel"
      >
        <input
          checked=""
          class="photon-checkbox photon-checkbox-default"
          name="includeFullTimeRange"
          type="checkbox"
        />
        Include hidden time range
      </label>
      <label
        class="photon-label menuButtonsPublishDataChoicesLabel"
      >
        <input
          checked=""
          class="photon-checkbox photon-checkbox-default"
          name="includeScreenshots"
          type="checkbox"
        />
        Include screenshots
      </label>
      <label
        class="photon-label menuButtonsPublishDataChoicesLabel"
      >
        <input
          checked=""
          class="photon-checkbox photon-checkbox-default"
          name="includeUrls"
          type="checkbox"
        />
        Include resource URLs
      </label>
      <label
        class="photon-label menuButtonsPublishDataChoicesLabel"
      >
        <input
          checked=""
          class="photon-checkbox photon-checkbox-default"
          name="includeExtension"
          type="checkbox"
        />
        Include extension information
      </label>
    </div>
    <div
      class="menuButtonsPublishButtons"
    >
      <button
        class="photon-button menuButtonsPublishButton menuButtonsPublishButtonsDownload menuButtonsPublishButtonDisabled"
        type="button"
      >
        Compressing…
      </button>
      <button
        class="photon-button photon-button-primary menuButtonsPublishButton menuButtonsPublishButtonsUpload"
        type="submit"
      >
        <span
          class="menuButtonsPublishButtonsSvg menuButtonsPublishButtonsSvgUpload"
        />
        Publish
      </button>
    </div>
  </form>
</div>
`;

exports[`app/MenuButtons <Publish> matches the snapshot for the opened panel for a release profile 1`] = `
<div
  data-testid="MenuButtonsPublish-container"
>
  <form
    class="menuButtonsPublishContent"
  >
    <div
      class="menuButtonsPublishIcon"
    />
    <h1
      class="menuButtonsPublishTitle"
    >
      Share Performance Profile
    </h1>
    <p
      class="menuButtonsPublishInfoDescription"
    >
      Upload your profile and make it accessible to anyone with the link.
       By default, your personal data is removed.
    </p>
    <h3>
      Include additional data that may be identifiable
    </h3>
    <div
      class="menuButtonsPublishDataChoices"
    >
      <label
        class="photon-label menuButtonsPublishDataChoicesLabel"
      >
        <input
          class="photon-checkbox photon-checkbox-default"
          name="includeHiddenThreads"
          type="checkbox"
        />
        Include hidden threads
      </label>
      <label
        class="photon-label menuButtonsPublishDataChoicesLabel"
      >
        <input
          class="photon-checkbox photon-checkbox-default"
          name="includeFullTimeRange"
          type="checkbox"
        />
        Include hidden time range
      </label>
      <label
        class="photon-label menuButtonsPublishDataChoicesLabel"
      >
        <input
          class="photon-checkbox photon-checkbox-default"
          name="includeScreenshots"
          type="checkbox"
        />
        Include screenshots
      </label>
      <label
        class="photon-label menuButtonsPublishDataChoicesLabel"
      >
        <input
          class="photon-checkbox photon-checkbox-default"
          name="includeUrls"
          type="checkbox"
        />
        Include resource URLs
      </label>
      <label
        class="photon-label menuButtonsPublishDataChoicesLabel"
      >
        <input
          class="photon-checkbox photon-checkbox-default"
          name="includeExtension"
          type="checkbox"
        />
        Include extension information
      </label>
    </div>
    <div
      class="menuButtonsPublishButtons"
    >
      <button
        class="photon-button menuButtonsPublishButton menuButtonsPublishButtonsDownload menuButtonsPublishButtonDisabled"
        type="button"
      >
        Compressing…
      </button>
      <button
        class="photon-button photon-button-primary menuButtonsPublishButton menuButtonsPublishButtonsUpload"
        type="submit"
      >
        <span
          class="menuButtonsPublishButtonsSvg menuButtonsPublishButtonsSvgUpload"
        />
        Publish
      </button>
    </div>
  </form>
</div>
`;
